# ProjectAxium

./: .gitignore  CMakeLists.txt  PreLoad.cmake  revision.h.in.cmake
cmake/: genrev.cmake  options.cmake
cmake/compiler/msvc/: settings.cmake
cmake/macros/: FindMySQL.cmake
dep/: CMakeLists.txt
dep/acelite/ace/: CMakeLists.txt
dep/bzip2/: CMakeLists.txt
dep/g3dlite/: CMakeLists.txt
dep/gsoap/: CMakeLists.txt
dep/libmpq/: CMakeLists.txt
dep/mongoose/: CMakeLists.txt
dep/mysqllite/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt
dep/recastnavigation/Recast/: CMakeLists.txt
sql/data/: auth.sql  characters.sql
sql/struct/: auth.sql  characters.sql  logs.sql  world.sql
src/genrev/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.rc
src/server/authserver/Authentication/: AuthCodes.cpp  AuthCodes.h
src/server/authserver/Realms/: RealmList.cpp  RealmList.h
src/server/authserver/Server/: AuthSocket.cpp  AuthSocket.h  RealmAcceptor.h  RealmSocket.cpp  RealmSocket.h
src/server/collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  CMakeLists.txt  DynamicTree.cpp  DynamicTree.h  VMapDefinitions.h  VMapTools.h
src/server/collision/Management/: IVMapManager.h  MMapFactory.cpp  MMapFactory.h  MMapManager.cpp  MMapManager.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h
src/server/collision/Maps/: MapTree.cpp  MapTree.h  TileAssembler.cpp  TileAssembler.h
src/server/collision/Models/: GameObjectModel.cpp  GameObjectModel.h  ModelInstance.cpp  ModelInstance.h  WorldModel.cpp  WorldModel.h
src/server/game/: CMakeLists.txt
src/server/game/AI/: CreatureAI.cpp  CreatureAI.h  CreatureAIFactory.h  CreatureAIImpl.cpp  CreatureAIImpl.h  CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  CreatureAISelector.h
src/server/game/Accounts/: AccountMgr.cpp  AccountMgr.h
src/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h
src/server/game/Addons/: AddonMgr.cpp  AddonMgr.h
src/server/game/Chat/: Chat.cpp  (+3 more)
src/server/scripts/: CMakeLists.txt
src/server/shared/: CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Define.h  SystemConfig.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  resource.h  worldserver.conf.dist  worldserver.rc
src/tools/: CMakeLists.txt
src/tools/map_extractor/: CMakeLists.txt  System.cpp
src/tools/mmaps_generator/: CMakeLists.txt  IntermediateValues.cpp  IntermediateValues.h  MapBuilder.cpp  MapBuilder.h  PathCommon.h  PathGenerator.cpp  TerrainBuilder.cpp  TerrainBuilder.h  VMapExtensions.cpp
src/tools/vmap4_assembler/: CMakeLists.txt
src/tools/vmap4_extractor/: CMakeLists.txt  adtfile.cpp  adtfile.h  model.cpp  model.h  mpq_libmpq04.h  vmapexport.cpp  vmapexport.h  wmo.cpp
(+496 files in other folders)
